# expense_tracker

./: dump.rdb  pyproject.toml  requirements.txt
base/: exceptions.py  models.py  pagination.py  permissions.py
categories/: models.py  serializers.py
categories/migrations/: 0001_initial.py
category/: models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_category_slug_alter_category_user.py
expense_tracker/: settings.py  urls.py
transaction/: models.py  serializers.py  urls.py  views.py
transaction/migrations/: 0001_initial.py  0002_alter_transaction_date.py  0003_alter_transaction_description.py  0004_alter_transaction_description_alter_transaction_user.py
transactions/: models.py  views.py
transactions/migrations/: 0001_initial.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_customuser_mobile_no.py  0002_customuser_is_verified.py  0003_remove_customuser_is_verified.py  0003_remove_customuser_token_created_at_and_more.py  0004_rename_date_joined_customuser_created_at.py  0005_customuser_is_verified.py  0006_customuser_verification_token.py  0007_customuser_token_created_at.py
users/: models.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_last_name.py
users/templates/email/: verify_email.html
